--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,7 +1,94 @@
+body{
+    display:flex;
+    justify-content: center;
+    align-items:center;
+    height:100vh;
+    width:100vw;
+    overflow-x: hidden;
+    overflow-y:hidden;
+    margin:0;
+}
+
+
+
+.window{
+    background-color: RGBA(240,240,240,0.5);
+    width: 45%;
+    min-height: 40%;
+    display:flex;
+    flex-direction:column;
+    align-items: center;
+    border-radius: 20px;
+}
+
+.weather{
+    width:100%;
+    display:flex;
+    justify-content: flex-start;
+    margin-top: 20px;
+    margin-left:30px;
+    font-family:sans-serif;
+    font-weight:bold;
+    font-size: 15px;
+    color: #424242;
+}
+
+.clock__title{
+    font-size:80px;
+    color:#212121;
+    font-family: sans-serif;
+    margin-top: 20px;
+    margin-bottom:20px;
+}
+
 .form, .greeting{
     display:none;
 }
 
+.greeting{
+    font-size:40px;
+    margin-top:10px;
+    margin-bottom: 10px;
+    font-family:sans-serif;
+}
+
 .showing{
     display:block;
+}
+
+.toDoForm{
+    margin-top:20px;
+}
+
+.toDoForm input{
+    font-size:20px;
+    border-top: none;
+    border-left: none;
+    border-right: none;
+    border-bottom: 1px solid #424242;
+    max-width: 100%;
+    background-color: RGBA(0,0,0,0);
+}
+
+.toDoForm input:focus{
+    outline:none;
+}
+
+.bg-image{
+    position:absolute;
+    left:0;
+    top:0;
+    width: 100%;
+    height: 100vh;
+    z-index:-1;
+    animation: fadeIn 0.5s linear;
+}
+
+@keyframes fadeIn {
+    from{
+        opacity:0;
+    }
+    to{
+        opacity:1;
+    }
 }
