--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,4 +1,7 @@
+@import 'responsive.css';
+
 body{
+    position:relative;
     display:flex;
     justify-content: center;
     align-items:center;
@@ -9,16 +12,14 @@ body{
     margin:0;
 }
 
-
-
 .window{
     background-color: RGBA(240,240,240,0.5);
-    width: 45%;
     min-height: 40%;
     display:flex;
     flex-direction:column;
     align-items: center;
     border-radius: 20px;
+    max-height:75vh;
 }
 
 .weather{
@@ -34,11 +35,19 @@ body{
 }
 
 .clock__title{
-    font-size:80px;
     color:#212121;
     font-family: sans-serif;
     margin-top: 20px;
     margin-bottom:20px;
+}
+
+.form input{
+    background-color:RGBA(0,0,0,0);
+    color:#212121;
+    border-top: none;
+    border-left: none;
+    border-right: none;
+    border-bottom:1px solid #212121;
 }
 
 .form, .greeting{
@@ -46,7 +55,6 @@ body{
 }
 
 .greeting{
-    font-size:40px;
     margin-top:10px;
     margin-bottom: 10px;
     font-family:sans-serif;
@@ -61,7 +69,6 @@ body{
 }
 
 .toDoForm input{
-    font-size:20px;
     border-top: none;
     border-left: none;
     border-right: none;
@@ -74,6 +81,31 @@ body{
     outline:none;
 }
 
+.toDoList{
+ display:flex;
+ flex-direction: column;
+ align-items: flex-start;
+ padding-left:20px;
+}
+
+.toDoList li{
+    margin-bottom:8px;
+    font-family: sans-serif;
+}
+
+.toDoList button{
+ opacity:0.5;
+ margin-left:20px;
+ outline:none;
+ border:0;
+}
+
+.toDoList button:hover{
+    background-color: #212121;
+    color:#FFFFFF;
+}
+
+
 .bg-image{
     position:absolute;
     left:0;
@@ -82,6 +114,7 @@ body{
     height: 100vh;
     z-index:-1;
     animation: fadeIn 0.5s linear;
+    object-fit: cover;
 }
 
 @keyframes fadeIn {
